Fix tournament system not clickable, la queue hide, overflow hiden scroll in settings

--- a/frontend/src/css/settings.css
+++ b/frontend/src/css/settings.css
@@ -88,7 +88,7 @@
 	padding: 0;
 	margin: 0 auto;
 	max-width: 700px;
-	max-height: 400px;
+	max-height: 800px;
     overflow-y: auto;
 }
 
